<resources>
    <string name="app_name">Breaking Bad Characters Challenge</string>
    <string name="item_character_occupation">Occupation:</string>
    <string name="retry">Retry</string>
    <string name="character_details_title">Character details</string>
    <string name="occupations">Occupation(s):</string>
    <string name="status">Status</string>
    <string name="nickname">Nickname</string>
    <string name="tv_shows_details">Tv Show(s) details</string>
    <string name="appears_in">Appears in:</string>
    <string name="appears_in_seasons_breaking_bad">Season(s) %1$s of Breaking Bad</string>
    <string name="appears_in_seasons_better_call_saul">Season(s) %1$s of Better Call Saul</string>
    <string name="character_intro"> born in </string>
    <string name="toolbar_search_title">Search</string>
    <string name="generic_error">There was an error, please try again later</string>
    <string name="still_loading_error">Please wait until characters are loaded</string>
    <string name="search_error">No results for that search</string>
    <string name="reload">Reload characters</string>
    <string name="filter">Filter</string>
    <string name="filter_all">All</string>
    <string name="filter_season_1">Season 1</string>
    <string name="filter_season_2">Season 2</string>
    <string name="filter_season_3">Season 3</string>
    <string name="filter_season_4">Season 4</string>
    <string name="filter_season_5">Season 5</string>
</resources>