<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_layout"
        android:layout_width="match_parent"
        android:layout_height="360dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_character_details"
                android:layout_width="match_parent"
                android:layout_height="@dimen/toolbar_height"
                app:layout_collapseMode="pin"
                app:navigationIcon="@drawable/ic_arrow_back_white_18dp" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/character_details_avatar"
                android:layout_width="90dp"
                android:layout_height="@dimen/character_details_avatar"
                android:layout_gravity="center" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/character_details_title"
                style="@style/CharacterDetailsTitleTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginTop="@dimen/default_margin"
                android:text="@string/character_details_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/character_details_intro"
                style="@style/CharacterDetailsIntroStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                app:layout_constraintStart_toStartOf="@id/character_details_title"
                app:layout_constraintTop_toBottomOf="@id/character_details_title"
                tools:text="Walter White born at 09-07-1958" />

            <TextView
                android:id="@+id/character_details_occupations_title"
                style="@style/CharacterDetailsSubtitleStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:text="@string/occupations"
                app:layout_constraintStart_toStartOf="@id/character_details_intro"
                app:layout_constraintTop_toBottomOf="@id/character_details_intro" />

            <TextView
                android:id="@+id/character_details_occupations"
                style="@style/CharacterDetailsInfoStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin_small"
                app:layout_constraintStart_toStartOf="@id/character_details_intro"
                app:layout_constraintTop_toBottomOf="@id/character_details_occupations_title"
                tools:text="Meth King ping" />

            <TextView
                android:id="@+id/character_details_nickname_title"
                style="@style/CharacterDetailsSubtitleStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:text="@string/nickname"
                app:layout_constraintStart_toStartOf="@id/character_details_occupations"
                app:layout_constraintTop_toBottomOf="@id/character_details_occupations" />

            <TextView
                android:id="@+id/character_details_nickname"
                style="@style/CharacterDetailsInfoStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin_small"
                app:layout_constraintStart_toStartOf="@id/character_details_nickname_title"
                app:layout_constraintTop_toBottomOf="@id/character_details_nickname_title"
                tools:text="Heisenberg" />

            <TextView
                android:id="@+id/character_details_status_title"
                style="@style/CharacterDetailsSubtitleStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:text="@string/status"
                app:layout_constraintStart_toStartOf="@id/character_details_nickname"
                app:layout_constraintTop_toBottomOf="@id/character_details_nickname" />

            <TextView
                android:id="@+id/character_details_status"
                style="@style/CharacterDetailsInfoStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin_small"
                app:layout_constraintStart_toStartOf="@id/character_details_status_title"
                app:layout_constraintTop_toBottomOf="@id/character_details_status_title"
                tools:text="Presumed dead" />

            <View
                android:id="@+id/separator"
                android:layout_width="0dp"
                android:layout_height="@dimen/separator_height"
                android:layout_marginTop="@dimen/default_margin"
                android:background="@color/separator_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/character_details_status" />

            <TextView
                android:id="@+id/tv_show_details_title"
                style="@style/CharacterDetailsSubtitleStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:text="@string/tv_shows_details"
                app:layout_constraintStart_toStartOf="@id/character_details_status_title"
                app:layout_constraintTop_toBottomOf="@id/separator" />

            <TextView
                android:id="@+id/tv_show_details_appears_in_title"
                style="@style/CharacterDetailsSubtitleStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:text="@string/appears_in"
                app:layout_constraintStart_toStartOf="@id/tv_show_details_title"
                app:layout_constraintTop_toBottomOf="@id/tv_show_details_title" />

            <TextView
                android:id="@+id/tv_show_details_appears_in_breaking_bad"
                style="@style/CharacterDetailsInfoStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin_small"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="@id/tv_show_details_appears_in_title"
                app:layout_constraintTop_toBottomOf="@id/tv_show_details_appears_in_title"
                tools:text="Season(s) 1, 2"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/tv_show_details_appears_in_better_call_saul"
                style="@style/CharacterDetailsInfoStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin_small"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="@id/tv_show_details_appears_in_breaking_bad"
                app:layout_constraintTop_toBottomOf="@id/tv_show_details_appears_in_breaking_bad"
                tools:text="Season(s) 1, 2"
                tools:visibility="visible" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>